@@ -1,1 +1,27 @@
 # Debian13
+git clone --single-branch --branch=debian13 --depth=1 git@github.com:zi-an/docker.git
+
+```
+~/.docker/cli-plugins/docker.exe
+https://download.docker.com/win/static/stable/x86_64/docker-26.1.4.zip
+
+~/.docker/cli-plugins/docker-compose.exe
+https://github.com/docker/compose/releases/tag/v2.26.1
+https://github.com/docker/compose/releases/download/v2.26.1/docker-compose-windows-x86_64.exe
+
+~/.docker/cli-plugins/docker-buildx.exe
+https://github.com/docker/buildx/releases/tag/v0.13.1
+https://github.com/docker/buildx/releases/download/v0.13.1/buildx-v0.13.1.windows-amd64.exe
+```
+
+
+
+# 使用软件插件
+- WebStorm 2024.2.6
+- Chinese Language+Docker+Terminal
+- Git+Markdown+YAML
+```
+-javaagent:D:\tools\jetbra\ja-netfilter.jar=jetbrains
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
+```
